[tool.poetry]
name = "realtime-port-utilisation-monitor"
version = "1.0.0"
description = "Displays realtime port utilisation states"
authors = ["Simon Cottrill <git@tastyworm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
